--- a/sistema-apae-web/index.html
+++ b/sistema-apae-web/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="PT-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/img/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>sistema-apae-web</title>
+    <title>Sistema EGM</title>
   </head>
   <body>
     <div id="root"></div>
